# GtestLearn

Add/: CMakeLists.txt
Add/include/: calculator.hpp
Add/src/: calculator.cpp  main.cpp
Add/unit/: CMakeLists.txt  calculatortest.cpp
